tests/diagnostics/generic_struct_arity.kal
# Pair takes two type arguments; Pair<i64> is wrong.
struct Pair<A, B> { first: A, second: B }
fn f(p: Pair<i64>) -> i64 = 0;
